[project]
name = "pypcd4"
dynamic = ["version"]
description = "Read and write PCL .pcd files in python"
authors = [{ name = "urasakikeisuke", email = "keisuke.urasaki@map4.jp" }]
dependencies = [
    "numpy>=1.21.0",
    "python-lzf>=0.2.4",
    "pydantic >=1.10.8, <=2.5.2",
]
readme = "README.md"
requires-python = ">= 3.8.2"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
urls."Release Notes" = "https://github.com/MapIV/pypcd4/releases"
urls.Source = "https://github.com/MapIV/pypcd4"
urls.Tracker = "https://github.com/MapIV/pypcd4/issues"

[project.optional-dependencies]
dev = ["black", "mypy", "setuptools-scm", "isort"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "mypy>=1.5.1",
    "setuptools-scm>=7.1.0",
    "isort>=5.12.0",
    "pyproject-flake8>=6.0.0.post1",
    "pre-commit>=3.4.0",
    "pytest>=7.4.1",
    "tox>=4.11.1",
    "pytest-cov>=4.1.0",
]

[tool.rye.scripts]
lint = { chain = [
    "lint:isort",
    "lint:black",
    "lint:flake8",
    "lint:mypy",
    "lint:tox",
] }
"lint:isort" = "isort src"
"lint:black" = "black src"
"lint:flake8" = "pflake8 src"
"lint:mypy" = "mypy src"
"lint:tox" = "tox"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pypcd4/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.setuptools_scm]
write_to = "src/pypcd4/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.isort]
line_length = 100
profile = "black"

[tool.flake8]
max-line-length = 100
max-complexity = 18
ignore = "E203,E266,W503,"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
line-length = 100

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        py38
        py39
        py310
        py311

    [testenv]
    deps = pytest
    commands = pytest tests -vv
"""
